@@ -1,0 +1,143 @@
+// Lowrank decomposition for 2-D isotropic wave propagation. 
+//   Copyright (C) 2010 University of Texas at Austin
+//  
+//   This program is free software; you can redistribute it and/or modify
+//   it under the terms of the GNU General Public License as published by
+//   the Free Software Foundation; either version 2 of the License, or
+//   (at your option) any later version.
+//  
+//   This program is distributed in the hope that it will be useful,
+//   but WITHOUT ANY WARRANTY; without even the implied warranty of
+//   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+//   GNU General Public License for more details.
+//  
+//   You should have received a copy of the GNU General Public License
+//   along with this program; if not, write to the Free Software
+//   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+#include <time.h>
+
+#include <rsf.hh>
+
+#include "vecmatop.hh"
+#include "serialize.hh"
+
+using namespace std;
+
+static std::valarray<double>  vs;
+static std::valarray<double> ks;
+static float dt;
+
+int sample(vector<int>& rs, vector<int>& cs, DblNumMat& res)
+{
+    int nr = rs.size();
+    int nc = cs.size();
+    res.resize(nr,nc);  
+    for(int a=0; a<nr; a++) {
+	for(int b=0; b<nc; b++) {
+	    res(a,b) = 2*(cos(vs[rs[a]]*ks[cs[b]]*dt)-1); 
+	}
+    }
+    return 0;
+}
+double stablecoef;
+int main(int argc, char** argv)
+{   
+    sf_init(argc,argv); // Initialize RSF
+
+    iRSF par(0);
+    int seed;
+
+    par.get("seed",seed,time(NULL)); // seed for random number generator
+    srand48(seed);
+
+    double eps;
+    par.get("eps",eps,1.e-4); // tolerance
+    par.get("stablecoef",stablecoef,0); // tolerance
+    cerr<<"eps="<<eps<<endl;
+    int npk;
+    par.get("npk",npk,20); // maximum rank
+
+    par.get("dt",dt); // time step
+
+    iRSF vel;
+
+    int nz,nx;
+    vel.get("n1",nz);
+    vel.get("n2",nx);
+    int m = nx*nz;
+    std::valarray<float> vels(m);
+    vel >> vels;
+    vs.resize(m);
+    for(int i=0;i<m;i++)
+    vs[i]=vels[i];	
+    
+    iRSF fft("fft");
+
+    int nkz,nkx;
+    fft.get("n1",nkz);
+    fft.get("n2",nkx);
+
+    float dkz,dkx;
+    fft.get("d1",dkz);
+    fft.get("d2",dkx);
+    
+    float kz0,kx0;
+    fft.get("o1",kz0);
+    fft.get("o2",kx0);
+    double kx, kz;
+
+    int n = nkx*nkz;
+    std::valarray<double> k(n);
+    for (int ix=0; ix < nkx; ix++) {
+	kx = kx0+ix*dkx;
+	for (int iz=0; iz < nkz; iz++) {
+	    kz = kz0+iz*dkz;
+	    k[iz+ix*nkz] = 2*SF_PI*hypot(kx,kz);
+	}
+    }
+    ks.resize(n);
+    ks = k;
+
+    vector<int> lidx, ridx;
+    DblNumMat mid;
+
+    iC(ddlowrank(m,n,sample,eps,npk,lidx,ridx,mid) );
+
+    int n2=mid.n();
+    int m2=mid.m();
+
+    vector<int> midx(m), nidx(n);
+    for (int k=0; k < m; k++) 
+	midx[k] = k;
+    for (int k=0; k < n; k++) 
+	nidx[k] = k;    
+
+    DblNumMat lmat(m,m2);
+    iC ( sample(midx,lidx,lmat) );
+
+    DblNumMat lmat2(m,n2);
+    iC( ddgemm(1.0, lmat, mid, 0.0, lmat2) );
+
+    double *ldat = lmat2.data();
+    std::valarray<float> ldata(m*n2);
+    for (int k=0; k < m*n2; k++) 
+	ldata[k] = ldat[k];
+    oRSF left("left");
+    left.put("n1",m);
+    left.put("n2",n2);
+    left << ldata;
+
+    DblNumMat rmat(n2,n);
+    iC ( sample(ridx,nidx,rmat) );
+
+    double *rdat = rmat.data();
+    std::valarray<float> rdata(n2*n);    
+    for (int k=0; k < n2*n; k++) 
+	rdata[k] = rdat[k];
+    oRSF right;
+    right.put("n1",n2);
+    right.put("n2",n);
+    right << rdata;
+
+    exit(0);
+}
