@@ -1,0 +1,64 @@
+import os, sys, re, string
+sys.path.append('../../framework')
+import bldutil
+
+ccprogs = 'isolr25'
+
+try:  # distributed version
+    Import('env root pkgdir bindir libdir incdir')
+    env = env.Clone()
+except: # local version
+    env = bldutil.Debug()
+    root = None
+    SConscript('../lexing/SConstruct')
+
+dynpre = env.get('DYNLIB','') 
+
+env.Prepend(CPPPATH=['../../include'],
+	    LIBPATH=['../../lib'],
+	    LIBS=[dynpre+'rsf'])
+
+if 'c++' in env.get('API',[]):
+    lapack = env.get('LAPACK')
+else:
+    lapack = None
+
+if lapack:
+    libsxx = [dynpre+'rsf++','vecmatop']
+    if not isinstance(lapack,bool):
+        libsxx.extend(lapack)
+    env.Prepend(LIBS=libsxx)
+
+ccmains = Split(ccprogs)
+for prog in ccmains:
+    sources = ['M' + prog]
+    if lapack:
+        prog = env.Program(prog,map(lambda x: x + '.cc',sources))
+        if root:
+            install = env.Install(bindir,prog)
+            
+            if dynpre and env['PLATFORM'] == 'darwin':
+                env.AddPostAction(install,
+                'install_name_tool -change '
+                'build/api/c/libdrsf.dylib '
+                '%s/libdrsf.dylib %s' % (libdir,install[0]))
+                env.AddPostAction(install,
+                'install_name_tool -change '
+                'build/api/c++/libdrsf++.dylib '
+                '%s/libdrsf++.dylib %s' % (libdir,install[0]))
+    else:
+        prog = env.RSF_Place('sf'+prog,None,var='LAPACK',package='lapack')
+        if root:
+            env.Install(bindir,prog)
+######################################################################
+# SELF-DOCUMENTATION
+######################################################################
+if root:
+    user = os.path.basename(os.getcwd())
+    main = 'sf%s.py' % user
+    
+    docs = map(lambda prog: env.Doc(prog,'M%s.cc' % prog,lang='c++'),ccmains) 
+    env.Depends(docs,'#/framework/rsf/doc.py')	
+
+    doc = env.RSF_Docmerge(main,docs)
+    env.Install(pkgdir,doc)
